new classes in MVC pattern

--- a/EDICodeViever/EDICodeViever.csproj
+++ b/EDICodeViever/EDICodeViever.csproj
@@ -74,6 +74,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="EdiControler.cs" />
+    <Compile Include="EdiModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
